styles/global.css
@font-face {
  font-family: 'JetBrains Mono Web';
  font-display: swap;
  font-style: normal;
  src: url('/fonts/JetBrainsMono.woff2') format('woff2');
}

@font-face {
  font-family: 'JetBrains Mono Web';
  font-display: swap;
  font-style: italic;
  src: url('/fonts/JetBrainsMono-Italic.woff2') format('woff2');
}

@font-face {
  font-family: 'JetBrains Mono Web';
  font-display: swap;
  font-style: normal;
  font-weight: 700;
  src: url('/fonts/JetBrainsMono-Bold.woff2') format('woff2');
}

html {
  @apply bg-gray-100 text-gray-800;
}

html.dark {
  @apply bg-black text-white;
}

.textPrimary {
  @apply text-gray-800 dark:text-white;
}

.textSecondary {
  @apply text-gray-600 dark:text-gray-300;
}

.borderColor {
  @apply border-gray-200 dark:border-gray-700;
}

.prose > * + * {
  @apply mt-6;
}

.prose > h2 {
  @apply text-xl;
}

.prose > * + h2,
.prose > * + h3 {
  @apply mt-12;
}

.prose > ul:not([class]) {
  padding-left: 1.35rem;
  list-style-type: disc;
}

.prose > ul li + li {
  padding-top: 0.25rem;
}

.prose > blockquote {
  @apply border-l-4 pl-4 border-gray-200 dark:border-gray-700 text-gray-600 dark:text-gray-300;
}

.prose a {
  text-decoration: underline;
}

.prose a:hover,
.prose a:focus {
  text-decoration: none;
}

.prose > hr {
  @apply bg-gray-200 dark:bg-gray-800 h-px w-full border-0;
}

code {
  @apply bg-gray-200 dark:bg-gray-800 px-1 rounded;
}

kbd {
  @apply bg-gray-200 dark:bg-gray-800 border-gray-300 dark:border-gray-700 px-1 rounded border-b-2;
}

mark {
  @apply bg-yellow-200;
  color: inherit;
}

[style*='--aspect-ratio'] {
  position: relative;
  width: 100%;
}

[style*='--aspect-ratio']::before {
  content: '';
  display: block;
  padding-bottom: calc(100% / (var(--aspect-ratio)));
}

[style*='--aspect-ratio'] > :first-child {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.section + .section {
  @apply pt-12 mt-12 border-t border-gray-200 dark:border-gray-800;
}

.cursor-grab {
  cursor: grab;
}

.area-1\/1 {
  grid-area: 1 / 1;
}

